# Fresh-Install

./: freshInstall.ps1  syncDrives.ps1  variables.ps1
Python Packages/: packages.txt
Python Packages/WalabotSDK/driver/: walabot_usb.cat  walabot_usb.inf
Python Packages/WalabotSDK/example/c++/: CMakeLists.txt  InWallSampleCode.cpp  SensorBreathingSampleCode.cpp  SensorCodeSample.cpp  TrackerSampleCode.cpp
Python Packages/WalabotSDK/example/python/: BreathingApp.py  FallingDetection.py  PeopleCounter.py  SensorApp.py  TrackerApp.py
Python Packages/WalabotSDK/inc/: WalabotAPI.h
Python Packages/WalabotSDK/install/: Install.ps1  Uninstall.ps1
Python Packages/WalabotSDK/license/: WalabotLicenseAgreement.txt
Python Packages/WalabotSDK/python/: README.txt
configs/: saveConfigs.ps1
configs/FlowLauncher/Settings/: History.json  History.json.bak  Settings.json  Settings.json.bak  UserSelectedRecord.json.bak
configs/FlowLauncher/Settings/Plugins/Flow.Launcher.Plugin.Program/: Settings.json  Settings.json.bak
configs/FlowLauncher/Settings/Plugins/Flow.Launcher.Plugin.Shell/: Settings.json.bak
configs/OhMyPosh/: config.json
configs/VSCode/: extensions.txt  keybindings.json  settings.json
